# train

./: .gitignore  README.md  train.cabal
src/: Geom.hs  Main.hs  Termin.hs  Train.hs
